Bug #316177 --> command line optiosn for -compose broken. patch by chandong.cui@sun.com r=bsmedberg sr=mscott